DOC-2325: Add new sandbox_iframes_exclusions option to content-filtering.adoc.

--- a/modules/ROOT/pages/content-filtering.adoc
+++ b/modules/ROOT/pages/content-filtering.adoc
@@ -47,6 +47,8 @@ include::partial$configuration/protect.adoc[]
 
 include::partial$configuration/sandbox_iframes.adoc[]
 
+include::partial$configuration/sandbox_iframes_exclusions.adoc[]
+
 include::partial$configuration/schema.adoc[]
 
 include::partial$configuration/valid_children.adoc[]
