--- a/modules/ROOT/pages/7.0-release-notes.adoc
+++ b/modules/ROOT/pages/7.0-release-notes.adoc
@@ -278,7 +278,7 @@ Any editors using this `highlight_on_focus: true` option, can remove this option
 
 === Improved Custom Elements
 
-{productname} 7.0 introduces enhancements to the existing xref:content-filtering.adoc#custom_elements.adoc[`custom_elements`] option in {productname}, now featuring the `addCustomElements` API. This update refines the structure of custom elements, offering users more flexibility and customization options.
+{productname} 7.0 introduces enhancements to the existing xref:content-filtering.adoc#custom_elements.adoc[`custom_elements`] option and `addCustomElements` API in {productname}. This update refines the structure of custom elements, offering users more flexibility and customization options.
 
 Key Improvements:
 
