--- a/modules/ROOT/pages/7.0-release-notes.adoc
+++ b/modules/ROOT/pages/7.0-release-notes.adoc
@@ -15,7 +15,6 @@ include::partial$misc/admon-releasenotes-for-stable.adoc[]
 // Pluralise as necessary or remove the placeholder plural marker.
 * xref:new-premium-plugin<s>[New Premium plugins]
 * xref:new-open-source-plugin<s>[New Open Source plugin]
-* xref:new-non-open-source-plugin[New Non Open Source plugin]
 * xref:accompanying-premium-plugin-changes[Accompanying Premium plugin changes]
 * xref:accompanying-premium-plugin-end-of-life-announcement[Accompanying Premium plugin end-of-life announcement]
 * xref:accompanying-open-source-plugin-end-of-life-announcement[Accompanying open source plugin end-of-life-announcement]
@@ -40,6 +39,14 @@ The new Premium plugin, **<Premium plugin name>** // description here.
 
 For information on the **<Premium plugin name>** see xref:<plugincode>.adoc[<Premium plugin name>].
 
+=== Markdown
+
+The new Premium plugin, **Markdown**, detects pure markdown from a paste event within a {productname} editor instance and converts it to HTML.
+
+include::partial$misc/admon-premium-plugin.adoc[]
+
+For information on the **Markdown** plugin see xref:markdown.adoc[Markdown].
+
 
 [[new-open-source-plugin]]
 == New Open Source plugin
@@ -51,21 +58,6 @@ The following new Open Source plugin was released alongside {productname} <x.y[.
 The new open source plugin, **<Open source plugin name>** // description here.
 
 For information on the **<Open source plugin name>** plugin see xref:<plugincode>.adoc[<Open source plugin name>].
-
-[[new-non-open-source-plugin]]
-== New Non Open Source plugin
-
-The following new non-open-source plugin was released alongside {productname} 7.0.
-
-include::partial$misc/admon-non-open-source-plugin-statement.adoc[]
-
-[[non-open-source-plugin-markdown]]
-=== Markdown
-
-The new non-open-source plugin, **Markdown**, detects pure markdown from a paste event within a {productname} editor instance and converts it to HTML.
-
-For information on the **Markdown** plugin see xref:markdown.adoc[Markdown].
-
 
 [[accompanying-premium-plugin-changes]]
 == Accompanying Premium plugin changes
