--- a/modules/ROOT/pages/7.0-release-notes.adoc
+++ b/modules/ROOT/pages/7.0-release-notes.adoc
@@ -78,7 +78,7 @@ Below is a table outlining the renaming of certain plugins:
 | Advanced Tables | Enhanced Tables
 | Advanced Templates | Templates
 | Enhanced Image Editing | Image Editing
-| Enhanced Skins & Icons Packs | Skins & Icons Packs
+| Skins & Icons Packs | Enhanced Skins & Icons Packs
 | Spell Checker Pro | Spell Checker
 |===
 
