--- a/modules/ROOT/pages/7.0-release-notes.adoc
+++ b/modules/ROOT/pages/7.0-release-notes.adoc
@@ -108,7 +108,7 @@ The **Enhanced Skins & Icon Packs** release includes the following updates:
 
 The **Enhanced Skins & Icon Packs** were rebuilt to pull in the changes also incorporated into the default {productname} 7.0 skin, Oxide.
 
-==== Fixed some focus issues related to {productname} 5 skin and premium skins
+==== Fixed some focus issues related to {productname} 5 skin and Enhanced skins.
 //# TINY-9176
 
 The current colors for various UI buttons didn’t provide suitable contrast against the background/neighboring components.
