--- a/modules/ROOT/pages/7.0-release-notes.adoc
+++ b/modules/ROOT/pages/7.0-release-notes.adoc
@@ -12,6 +12,8 @@ include::partial$misc/admon-releasenotes-for-stable.adoc[]
 {productname} 7.0 was released for {enterpriseversion} and {cloudname} on Wednesday, March 20^th^, 2024. These release notes provide an overview of the changes for {productname} 7.0, including:
 
 * xref:new-premium-plugin<s>[New Premium plugins]
+* xref:new-open-source-plugin<s>[New Open Source plugin]
+* xref:new-premium-plugin<s>[New Premium plugins]
 * xref:accompanying-premium-plugin-changes[Accompanying Premium plugin changes]
 * xref:accompanying-premium-plugin-end-of-life-announcement[Accompanying Premium plugin end-of-life announcement]
 * xref:accompanying-open-source-plugin-end-of-life-announcement[Accompanying open source plugin end-of-life-announcement]
@@ -54,6 +56,14 @@ The new Premium plugin, **Export to PDF** feature lets you generate a `.pdf` fil
 include::partial$misc/admon-paid-addon-pricing.adoc[]
 
 For information on the **Export to PDF Premium Plugin** see xref:exportpdf.adoc[Export to PDF docs].
+
+=== Markdown
+
+The new Premium plugin, **Markdown**, detects pure markdown from a paste event within a {productname} editor instance and converts it to HTML.
+
+include::partial$misc/admon-premium-plugin.adoc[]
+
+For information on the **Markdown** plugin see xref:markdown.adoc[Markdown].
 
 
 [[accompanying-premium-plugin-changes]]
