--- a/modules/ROOT/partials/commands/importword-cmds.adoc
+++ b/modules/ROOT/partials/commands/importword-cmds.adoc
@@ -13,4 +13,5 @@ document.querySelector('button').addEventListener('click',
 ----
 
 [NOTE]
-To activate the `ImportWord` command, users are required to click on the "Import to Word" button. Upon clicking the button, the `ImportWord` command is triggered.
+
+The `ImportWord` command cannot be directly invoked through a script at the top level or from the browser console. Instead, it necessitates a specific user action within the user interface, such as clicking a toolbar button. To ensure correct execution, the command should be called within the scope of an event handler tied to a specific user interaction, as shown in the example.
