--- a/modules/ROOT/partials/index-pages/premium-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/premium-plugins.adoc
@@ -79,7 +79,7 @@ a|
 [.lead]
 xref:exportword.adoc[Export to Word]
 
-Exports editor content from into `.docx` file format to local disk.
+Exports editor content into `.docx` file format and saves to local disk.
 
 a|
 [.lead]
