--- a/modules/ROOT/partials/configuration/improved_custom_elements.adoc
+++ b/modules/ROOT/partials/configuration/improved_custom_elements.adoc
@@ -1,5 +1,5 @@
-[[improved-custom-elements]]
-== Improved Custom Elements
+[[custom-elements]]
+== `custom_elements`
 
 
 * **New Custom Element Structure:** The custom_elements option and the `addCustomElements` API now support a more complex structure. This structure is defined by a record where the key represents the name of the element, and the value corresponds to a detailed specification.
