--- a/modules/ROOT/partials/configuration/revisionhistory_fetch.adoc
+++ b/modules/ROOT/partials/configuration/revisionhistory_fetch.adoc
@@ -10,8 +10,7 @@ The {pluginname} plugin does not sort the result before displaying. This allows 
 
 *Type:* `+Function+` (Returns a https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise[Promise])
 
-*Input parameters:*
-None
+*Input parameters:* None
 
 *Return data:* `+Array+`
 
