--- a/modules/ROOT/pages/revisionhistory.adoc
+++ b/modules/ROOT/pages/revisionhistory.adoc
@@ -17,6 +17,7 @@ The {pluginname} plugin provides users an ability to see how a document has chan
 
 liveDemo::{plugincode}[]
 
+include::partial$misc/admon-iframe-only.adoc[]
 
 === How it works
 
