DOC-2269: Add new plugin documentation for `Markdown`. (#3069)
* DOC-2269: Add new plugin documentation for Markdown.

* DOC-2269: add markdown to plugin-list, bundling-files & added template for config options.

* DOC-2269: add markdown symbols option to documentation.

* Update modules/ROOT/partials/configuration/markdown.adoc

Co-authored-by: Ky Eltis <skylite.eltis@gmail.com>

* Update modules/ROOT/pages/markdown.adoc

* Update modules/ROOT/pages/markdown.adoc

Co-authored-by: Ky Eltis <skylite.eltis@gmail.com>

* Update modules/ROOT/pages/markdown.adoc

* Update modules/ROOT/pages/markdown.adoc

* Update modules/ROOT/partials/commands/markdown-cmds.adoc

Co-authored-by: vpyshnenko <viktor.pyshnenko@tiny.cloud>

* Update modules/ROOT/partials/commands/markdown-cmds.adoc

Co-authored-by: vpyshnenko <viktor.pyshnenko@tiny.cloud>

* Update modules/ROOT/pages/markdown.adoc

* Update modules/ROOT/pages/markdown.adoc

* Update modules/ROOT/pages/markdown.adoc

* DOC-2269: add basic syntax support table, general cleanup for template.

* DOC-2269: insert table for basic syntax

* Update modules/ROOT/pages/markdown.adoc

* Update modules/ROOT/pages/markdown.adoc

* DOC-2269: add getContent() api, and include handy shortcut keys when pasting markdown.

---------

Co-authored-by: Ky Eltis <skylite.eltis@gmail.com>
Co-authored-by: vpyshnenko <viktor.pyshnenko@tiny.cloud>

--- a/modules/ROOT/partials/misc/premium-plugin-list.adoc
+++ b/modules/ROOT/partials/misc/premium-plugin-list.adoc
@@ -11,6 +11,7 @@
 * xref:inline-css.adoc[Inline CSS]
 * xref:editimage.adoc[Image Editing]
 * xref:linkchecker.adoc[Link Checker]
+* xref:markdown.adoc[Markdown]
 * xref:mentions.adoc[Mentions]
 * xref:mergetags.adoc[Merge Tags]
 * xref:moxiemanager.adoc[MoxieManager]
