--- a/modules/ROOT/partials/index-pages/premium-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/premium-plugins.adoc
@@ -89,6 +89,12 @@ Validate links, as they are typed.
 
 a|
 [.lead]
+xref:markdown.adoc[Markdown]
+
+Enable conversion of pure markdown on paste.
+
+a|
+[.lead]
 xref:mentions.adoc[Mentions]
 
 Enable @mention functionality.
